feat: JWT token validation
